--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
 }
