--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET = Praveen123;
-MONGODB_URL = mongodb://localhost:27017/4x_dollar
+PORT= 3335
+# MONGODB_URL = mongodb://localhost:27017/4x_dollar
+MONGODB_URL = mongodb+srv://aniket:aniket123@cluster0.on8oimq.mongodb.net/santosh?retryWrites=true&w=majority&appName=Cluster0
