--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ JWT_SECRET = Praveen123;
 PORT= 3335
 # MONGODB_URL = mongodb://localhost:27017/4x_dollar
 MONGODB_URL = mongodb+srv://aniket:aniket123@cluster0.on8oimq.mongodb.net/santosh?retryWrites=true&w=majority&appName=Cluster0
+
+ClientUrl=http://localhost:5175
+
+EMAIL_USER = aniketverma000081@gmail.com
+
+
+EMAIL_PASS = wrck hagx sxpb ehui
