--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@ ClientUrl=http://localhost:5173
 
 EMAIL_USER = aniketverma000081@gmail.com
 
+SERVER_URL = https://api.learnlinks.in/santosh
 
 EMAIL_PASS = wrck hagx sxpb ehui
