--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ClientUrl=http://localhost:5173
 
 EMAIL_USER = aniketverma000081@gmail.com
 
-# SERVER_URL = https://api.learnlinks.in/santosh
-SERVER_URL = http://localhost:3335
+SERVER_URL = https://api.learnlinks.in/santosh
+# SERVER_URL = http://localhost:3335
 
 EMAIL_PASS = wrck hagx sxpb ehui
