--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PORT= 3335
 MONGODB_URL = mongodb+srv://aniket:aniket123@cluster0.on8oimq.mongodb.net/santosh?retryWrites=true&w=majority&appName=Cluster0
 
 # ClientUrl=http://localhost:5173
-ClientUrl=https://fourxdoller.onrender.com/
+ClientUrl=https://fourxdoller.onrender.com
 
 EMAIL_USER = aniketverma000081@gmail.com
 
