--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ PORT= 3335
 MONGODB_URL = mongodb+srv://bwctraders:santosh33@cluster0.y1v1ak8.mongodb.net/4x_dollar?retryWrites=true&w=majority&appName=Cluster0
 
 # ClientUrl=http://localhost:5173
-ClientUrl=https://fourxdoller.onrender.com
+# ClientUrl=https://fourxdoller.onrender.com
+ClientUrl=https://4xdollar.com/
 
 EMAIL_USER = aniketverma000081@gmail.com
 
