--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ JWT_SECRET = Praveen123;
 PORT= 3335
 # MONGODB_URL = mongodb://localhost:27017/4x_dollar
 # MONGODB_URL = mongodb+srv://aniket:aniket123@cluster0.on8oimq.mongodb.net/santosh?retryWrites=true&w=majority&appName=Cluster0
-MONGODB_URL = mongodb+srv://bwctraders:santosh33@cluster0.y1v1ak8.mongodb.net/4x_dollar?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL = mongodb+srv://bwctraders:santosh333@cluster0.y1v1ak8.mongodb.net/4xdollar?retryWrites=true&w=majority&appName=Cluster0
 
 # ClientUrl=http://localhost:5173
 # ClientUrl=https://fourxdoller.onrender.com
